--- a/express/.env
+++ b/express/.env
@@ -2,12 +2,19 @@
 APP = local
 PORT = 5500
 
-DB_DIALECT = postgres
-DB_HOST =  local.getzenbasket.com
-DB_PORT = 5432
-DB_NAME = zenbasket
-DB_USER = centizen
-DB_PASSWORD = centizen
+# DB_DIALECT = postgres
+# DB_HOST =  local.getzenbasket.com
+# DB_PORT = 5432
+# DB_NAME = zenbasket
+# DB_USER = centizen
+# DB_PASSWORD = centizen
+
+DB_DIALECT = mysql
+DB_HOST = localhost
+DB_PORT = 3306
+DB_NAME = zenbasket_task_21_05
+DB_USER = root
+DB_PASSWORD = root
 
 MAX_POOL_CONN = 50
 MIN_POOL_CONN = 0
